Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -139,18 +139,25 @@
         "C8-hqFACoskw",
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
-        "vUcr9l-QBV2m",
         "HXmexh_cBV2o",
         "rh9vFZIYBfGW",
         "mojqkuQlBfMe",
         "Xc2rVYZ1DWAq",
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
+        "xkIriFz6cHx4",
         "x7YAB5ujcHx5",
         "kArAHccTng62",
         "nNO6sdMynhHy",
         "j-N-s25MnhQ7",
+        "G3BQimBInbs_",
         "RU-6_5TfnbtA",
+        "vBoQtJDu-l5f",
+        "0FbEMSMz-mjc",
+        "9uEH1xMj-mm9",
+        "F_HHKAkB-mqL",
+        "eV2Uw5Ym-mt0",
+        "0l8CJACU8_ZX",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -210,7 +217,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyMW5gPIqxe1nskC38mnjcsx",
+      "authorship_tag": "ABX9TyOyGjHBqjBpzt1rUOJri2/c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10612,13 +10619,282 @@
         "id": "eV2Uw5Ym-mt0"
       },
       "source": [
-        "#### "
+        "####  17472번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wP0WydcE-mt0"
+      },
+      "source": [
+        "### 해당 땅이 다 이어져있는 지 여부에 대한 반례를 찾는데 오래걸림\n",
+        "import sys\n",
+        "import heapq\n",
+        "\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def findParent(x):      # 부모 노드 찾는 함수\n",
+        "    global root_nodes        \n",
+        "    if root_nodes[x] == x:           # 자신이 부모 노드이면\n",
+        "        return x                # 자신 return\n",
+        "\n",
+        "    root_nodes[x] = findParent(root_nodes[x]) # 부모 노드가 아니면, x의 부모노드로 변환\n",
+        "    return root_nodes[x]             # 결론적으로 x가 속한 집합의 root 반환\n",
+        "\n",
+        "def union(x, y):        # 합집합 연산\n",
+        "    global root_nodes                # 글로변 변수 지정\n",
+        "\n",
+        "    if x < y:               # x 보다 y의 노드가 작으면\n",
+        "        root_nodes[y] = x                # y -> x 로 변환\n",
+        "    else:                   # 그 이외이면\n",
+        "        root_nodes[x] = y                # x -> y 로 변환\n",
+        "\n",
+        "def bfs(x,y, num):                          # 땅의 넘버링을 위한 bfs 함수\n",
+        "    global n, m                                 # 글로벌 변수 지정\n",
+        "    global s, visited, surface                  # 글로벌 변수 지정\n",
+        "\n",
+        "    visited[x][y] = num                         # 해당 위치 넘버링\n",
+        "\n",
+        "    for i, j in [(0,1),(0,-1),(1,0),(-1,0)]:    # 상, 하, 좌, 우 진행\n",
+        "        a, b = x + i, y + j                         # 이동한 위치 변수 생성\n",
+        "        if 0 <= a < n and 0 <= b < m:               # 지도 안에 있으며\n",
+        "            if not visited[a][b]:                       # 방문한 적이 없어야 함(방문한 섬이 아니어야 함)\n",
+        "                if s[a][b] == 1:                            # 섬이면\n",
+        "                    bfs(x+i, y+j, num)                          # 해당 위치로 bfs 진행\n",
+        "\n",
+        "                if s[a][b] == 0:                            # 바다면\n",
+        "                    surface.append([a,b,i,j,1])                 # 해당 표면의 일직선 정보 입력\n",
+        "\n",
+        "def main():                                     # 메인 함수\n",
+        "    global n, m, root_nodes                         # 글로벌 변수 지정\n",
+        "    global s, visited, surface                      # 글로벌 변수 지정\n",
+        "    n, m = map(int, input().split())                # 행, 열 크기 입력\n",
+        "\n",
+        "    s = []                                          # 지도 리스트 생성\n",
+        "    for _ in range(n):                              # 행 크기 만큼 반복\n",
+        "        s.append(list(map(int, input().split())))       # 지도 입력\n",
+        "\n",
+        "    num = 1                                         # 땅 넘버링할 변수 생성\n",
+        "    root_nodes = [False]                            # 유니온 파인드를 위한 땅 리스트 생성\n",
+        "    root_edges = [False]                            # 각 땅의 표면을 담을 리스트 생성\n",
+        "\n",
+        "    visited = [ [False] * m for _ in range(n)]      # 지도의 방문 여부 표시를 위한 리스트 생성\n",
+        "\n",
+        "    for i in range(n):                              # 행만큼 반복\n",
+        "        for j in range(m):                              # 열만큼 반복\n",
+        "            if s[i][j] == 1 and not visited[i][j]:          # 해당 위치가 땅이고 방문한적이 없다면\n",
+        "                surface = []                                    # 표면 리스트 생성\n",
+        "                bfs(i,j, num)                                   # 해당 넘버로 밀접한 땅 넘버링 진행\n",
+        "                root_edges.append(surface)                      # 표면을 위에 생성한 리스트에 담는다\n",
+        "                root_nodes.append(num)                          # 넘버링한 변수를 위에 생성한 리스트에 담는다\n",
+        "                num += 1                                        # 넘버링 1 증가\n",
+        "    \n",
+        "    edges = []                                              # 만들 수 있는 다리를 담을 리스트\n",
+        "    for i in range(1,num):                                  # 각 땅의 표면들을 호가인\n",
+        "        queue = root_edges[i]                                   # i번째 표면 리스트 생성\n",
+        "        while queue:                                            # queue로 bfs 진행\n",
+        "            n_x, n_y, way_x, way_y, length = heapq.heappop(queue)   # 표면에 대한 정보 pop\n",
+        "            a, b= n_x + way_x, n_y + way_y                          # 다음 위치 변수 생성\n",
+        "            if 0 <= a < n and 0 <= b < m:                           # 다음 위치가 맵안에 있다면\n",
+        "                if visited[a][b] and length != 1:                       # 땅이고 다리의 길이가 1 이상일 때\n",
+        "                    edges.append([i,visited[a][b], length])                 # 만들 수 있는 다리 생성\n",
+        "                \n",
+        "                if not visited[a][b]:                                   # 바다이면\n",
+        "                    heapq.heappush(queue, [a, b, way_x, way_y, length + 1]) # 다음 위치 추가\n",
+        "\n",
+        "    sorted_edges = sorted(edges, key = lambda x : x[2]) # edge들 가중치 기준 정렬\n",
+        "\n",
+        "    result_mst = 0                          # MST 가중치 변수 생성\n",
+        "    for i, j, k in sorted_edges:            # 모든 간선들 확인\n",
+        "        x = findParent(i)                       # i의 부모 노드 찾기\n",
+        "        y = findParent(j)                       # j의 부모 노드 찾기\n",
+        "\n",
+        "        if x != y:                              # i와 j의 부모 노드가 같지 않으면\n",
+        "            union(x,y)                              # i,j의 부모 노드 합집합\n",
+        "            result_mst += k                         # 결과값에 가중치 추가\n",
+        "\n",
+        "    root = []                                   # 모든 땅이 연결되어 있는 지 확인하기 위한 리스트\n",
+        "    for i in root_nodes[1:]:                    # 모든 땅을 반복\n",
+        "        root.append(findParent(i))                  # 해당 땅의 부모 노드 추가\n",
+        "\n",
+        "    if not result_mst or len(set(root)) != 1:   # 만들 수 있는 다리가 없거나 모든 땅이 연결되어 있지 않으면\n",
+        "        print(-1)                                   # -1 출력\n",
+        "    else:                                       # 아니면\n",
+        "        print(result_mst)                           # 결과 값 출력\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SVWsWXeW85B9"
+      },
+      "source": [
+        "### 31 단계 : 트리에서의 동적 계획법===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zpPH4G-085B-"
+      },
+      "source": [
+        "####  15681번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "taP8M76O86QU"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def countSubtreeNode(currentNode):      # 정점의 수 counting 함수\n",
+        "    global t, size, visited                 # 글로벌 변수 지정\n",
+        "    size[currentNode] = 1                   # 해당 노드를 루트로 하는 서브 쿼리가 존재\n",
+        "    visited[currentNode] = True             # 해당 노드 방문여부 표시\n",
+        "    for Node in t[currentNode]:             # 해당 노드와 연결된 노드로 진행\n",
+        "        if not visited[Node]:                   # 방문을 하지 않은 노드이면\n",
+        "            countSubtreeNode(Node)                  # 해당 노드 정점의 수 counting dfs\n",
+        "            size[currentNode] += size[Node]         # current 노드에 해당 노드의 서브 트리 개수 추가\n",
+        "\n",
+        "def main():                             # 메인 함수\n",
+        "    global t, size, visited                 # 글로벌 변수 지정\n",
+        "    n, r, q = map(int, input().split())     # 정점의 수, 루트 번호, 쿼리 수\n",
+        "\n",
+        "    t = [[] for _ in range(n+1)]            # 간선 리스트 형태 생성\n",
+        "\n",
+        "    for _ in range(n-1):                    # n-1 줄에 걸쳐\n",
+        "        u, v = map(int, input().split())        # 트리의 간선 정보 입력\n",
+        "        t[u].append(v)                          # 무방향 그래프이므로 \n",
+        "        t[v].append(u)                          # 양방향 연결\n",
+        "\n",
+        "    visited = [False] * (n + 1)             # 방문 여부 표시\n",
+        "    size = [False] * (n + 1)                # 서브 트리의 정점의 수\n",
+        "    \n",
+        "    countSubtreeNode(r)                     # 정점의 수 counting\n",
+        "    for _ in range(q):                      # 쿼리의 수 만큼 반복\n",
+        "        u = int(input())                        # 쿼리의 정수 입력\n",
+        "        print(size[u])                          # 해당 정수의 결과 출력\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XvFzDpYwA3KJ"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xczobKbZA3KJ"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-WWSnBrXA39V"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XaCeffCzA39V"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D8oqXAX5A4VI"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FK1CKJJEA4VJ"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0l8CJACU8_ZX"
+      },
+      "source": [
+        "### 32 단계 :===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "994fZwS78_ZX"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_gLJLPzk8_ZX"
       },
       "source": [
         "import sys\n",
