Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -157,6 +157,8 @@
         "9uEH1xMj-mm9",
         "F_HHKAkB-mqL",
         "eV2Uw5Ym-mt0",
+        "-WWSnBrXA39V",
+        "D8oqXAX5A4VI",
         "0l8CJACU8_ZX",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -217,7 +219,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyOyGjHBqjBpzt1rUOJri2/c",
+      "authorship_tag": "ABX9TyPMW6QrAnW060BbY+4h6hsP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10798,26 +10800,98 @@
         "id": "XvFzDpYwA3KJ"
       },
       "source": [
-        "####  번"
+        "####   2213번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xczobKbZA3KJ"
+        "id": "xczobKbZA3KJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9770b7d0-b2f6-4ad3-a748-fe4067424e3f"
       },
       "source": [
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def dfs(currentNode):\n",
+        "    global s, w, dp, visited\n",
+        "\n",
+        "    visited[currentNode] = True\n",
+        "    for Node in s[currentNode]:             # 해당 노드와 연결된 노드로 진행\n",
+        "        if not visited[Node]:                   # 방문을 하지 않은 노드이면\n",
+        "            dfs(Node)                  # 해당 노드 정점의 수 counting dfs\n",
+        "            if dp[Node][0][0] > dp[Node][1][0]:\n",
+        "                dp[currentNode][0][0] += dp[Node][0][0]\n",
+        "                dp[currentNode][0][1] += dp[Node][0][1]\n",
+        "            else:\n",
+        "                dp[currentNode][0][0] += dp[Node][1][0]\n",
+        "                dp[currentNode][0][1] += dp[Node][1][1]\n",
+        "\n",
+        "            dp[currentNode][1][0] += dp[Node][0][0]\n",
+        "            dp[currentNode][1][1] += dp[Node][0][1]\n",
+        "\n",
+        "    dp[currentNode][1][0] += w[currentNode]\n",
+        "    dp[currentNode][1][1].append(currentNode)\n",
+        "\n",
         "def main():\n",
+        "    global s, w, dp, visited\n",
+        "    n = int(input())\n",
+        "\n",
+        "    w = [False] + list(map(int, input().split()))\n",
+        "    \n",
+        "    s = [[] for _ in range(n+1)]\n",
+        "    for i in range(n-1):\n",
+        "        a, b = map(int, input().split())\n",
+        "        s[a].append(b)\n",
+        "        s[b].append(a)\n",
+        "    \n",
+        "    dp = [[[0,[]],[0,[]]] for _ in range(n+1)]\n",
+        "    visited = [False] * (n+1)\n",
+        "\n",
+        "    dfs(1)\n",
+        "    if dp[1][0][0] > dp[1][1][0]:\n",
+        "        print(dp[1][0][0])\n",
+        "        print(*sorted(dp[1][0][1]))\n",
+        "    else:\n",
+        "        print(dp[1][1][0])\n",
+        "        print(*sorted(dp[1][1][1]))\n",
+        "\n",
+        "\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "10 30 40 10 20 20 70\n",
+            "1 2\n",
+            "2 3\n",
+            "4 3\n",
+            "4 5\n",
+            "6 2\n",
+            "6 7\n",
+            "[[0, []], [0, []]]\n",
+            "[[130, [5, 3, 7]], [140, [5, 3, 7, 1]]]\n",
+            "[[130, [5, 3, 7]], [120, [5, 7, 2]]]\n",
+            "[[20, [5]], [60, [5, 3]]]\n",
+            "[[20, [5]], [10, [4]]]\n",
+            "[[0, []], [20, [5]]]\n",
+            "[[70, [7]], [20, [6]]]\n",
+            "[[0, []], [70, [7]]]\n",
+            "140\n",
+            "5 3 7 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
