Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -157,9 +157,13 @@
         "9uEH1xMj-mm9",
         "F_HHKAkB-mqL",
         "eV2Uw5Ym-mt0",
+        "SVWsWXeW85B9",
+        "XvFzDpYwA3KJ",
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
-        "0l8CJACU8_ZX",
+        "994fZwS78_ZX",
+        "J08dtKYX30yU",
+        "BjBgQ5WJ302e",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -219,7 +223,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyPMW6QrAnW060BbY+4h6hsP",
+      "authorship_tag": "ABX9TyMO5LJTl2TGDl2fA1RpuutL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10806,92 +10810,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xczobKbZA3KJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9770b7d0-b2f6-4ad3-a748-fe4067424e3f"
+        "id": "xczobKbZA3KJ"
       },
       "source": [
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def dfs(currentNode):\n",
-        "    global s, w, dp, visited\n",
+        "def dfs(currentNode):                           # DFS 함수(현재 노드)\n",
+        "    global s, w, dp, visited                        # 글로벌 변수 지정\n",
         "\n",
-        "    visited[currentNode] = True\n",
-        "    for Node in s[currentNode]:             # 해당 노드와 연결된 노드로 진행\n",
-        "        if not visited[Node]:                   # 방문을 하지 않은 노드이면\n",
-        "            dfs(Node)                  # 해당 노드 정점의 수 counting dfs\n",
-        "            if dp[Node][0][0] > dp[Node][1][0]:\n",
-        "                dp[currentNode][0][0] += dp[Node][0][0]\n",
-        "                dp[currentNode][0][1] += dp[Node][0][1]\n",
-        "            else:\n",
-        "                dp[currentNode][0][0] += dp[Node][1][0]\n",
-        "                dp[currentNode][0][1] += dp[Node][1][1]\n",
+        "    visited[currentNode] = True                     # 현재 노드 방문 표시\n",
+        "    for Node in s[currentNode]:                     # 현재 노드와 연결된 노드로 진행\n",
+        "        if not visited[Node]:                           # 방문을 하지 않은 노드이면\n",
+        "            dfs(Node)                                       # 연결된 노드 DFS 진행\n",
         "\n",
-        "            dp[currentNode][1][0] += dp[Node][0][0]\n",
-        "            dp[currentNode][1][1] += dp[Node][0][1]\n",
+        "            # 상위 노드가 독립집합에 포함되어 있지 않으면 경우의 수는 두 가지 이다.\n",
         "\n",
-        "    dp[currentNode][1][0] += w[currentNode]\n",
-        "    dp[currentNode][1][1].append(currentNode)\n",
+        "            if dp[Node][0][0] > dp[Node][1][0]:             # 연결된 노드를 포함하지 않은 독립집합의 가중치가 더 크다면 \n",
+        "                dp[currentNode][0][0] += dp[Node][0][0]         # 현재 노드를 포함하지 않은 가중치에 연결된 노드를 포함하지 않은 독립집합의 가중치를 추가\n",
+        "                dp[currentNode][0][1] += dp[Node][0][1]         # 현재 노드를 포함하지 않은 독립집합에 연결된 노드를 포함하지 않은 독립집합을 추가\n",
+        "            else:                                           # 연결된 노드를 포함하는 독립집합의 가중치가 더 크면\n",
+        "                dp[currentNode][0][0] += dp[Node][1][0]         # 현재 노드를 포함하지 않은 가중치에 연결된 노드를 포함하는 독립집합의 가중치를 추가\n",
+        "                dp[currentNode][0][1] += dp[Node][1][1]         # 현재 노드를 포함하지 않은 독립집합에 연결된 노드를 포함하는 독립집합을 추가\n",
         "\n",
-        "def main():\n",
-        "    global s, w, dp, visited\n",
-        "    n = int(input())\n",
+        "            # 상위 노드가 독립집합에 포함되어 있으면 경우의 수는 한 가지 이다.\n",
         "\n",
-        "    w = [False] + list(map(int, input().split()))\n",
+        "            dp[currentNode][1][0] += dp[Node][0][0]         # 현재 노드를 포함하는 가중치에 연결된 노드를 포함하지 않은 독립집합의 가중치를 추가\n",
+        "            dp[currentNode][1][1] += dp[Node][0][1]         # 현재 노드를 포함하는 독립집합에 연결된 노드를 포함하지 않은 독립집합을 추가\n",
+        "\n",
+        "    dp[currentNode][1][0] += w[currentNode]         # 현재 노드를 포함하는 가중치에 현재 노드의 가중치 추가\n",
+        "    dp[currentNode][1][1].append(currentNode)       # 현재 노드를 포함하는 독립집합에 현재 노드 추가\n",
+        "\n",
+        "def main():                                     # 메인 함수\n",
+        "    global s, w, dp, visited                        # 글로벌 변수 지정\n",
+        "    n = int(input())                                # 노드의 수 입력\n",
+        "\n",
+        "    w = [False] + list(map(int, input().split()))   # 가중치 리스트 입력\n",
         "    \n",
-        "    s = [[] for _ in range(n+1)]\n",
-        "    for i in range(n-1):\n",
-        "        a, b = map(int, input().split())\n",
-        "        s[a].append(b)\n",
-        "        s[b].append(a)\n",
+        "    s = [[] for _ in range(n+1)]                    # edge들 입력\n",
+        "    for i in range(n-1):                            # 노드의 수 - 1 번 반복\n",
+        "        a, b = map(int, input().split())                # 두 노드 입력\n",
+        "        s[a].append(b)                                  # 무방향 그래프이므로\n",
+        "        s[b].append(a)                                  # 양 노드에 추가\n",
         "    \n",
-        "    dp = [[[0,[]],[0,[]]] for _ in range(n+1)]\n",
-        "    visited = [False] * (n+1)\n",
+        "    dp = [[[0,[]],[0,[]]] for _ in range(n+1)]      # dp[현재노드][존재 여부][가중치, 독립집합]\n",
+        "    \n",
+        "    # 존재여부 : 0 이면 현재노드가 독립집합에 비포함, 1이면 포함 상태이다.\n",
+        "    # 가중치 : 현재노드를 루트로하는 서브트리 중 만들 수 있는 최댓값이다.\n",
+        "    # 독립집합 : 최댓값 가중치를 만드는 독립 집합이다.\n",
         "\n",
-        "    dfs(1)\n",
-        "    if dp[1][0][0] > dp[1][1][0]:\n",
-        "        print(dp[1][0][0])\n",
-        "        print(*sorted(dp[1][0][1]))\n",
-        "    else:\n",
-        "        print(dp[1][1][0])\n",
-        "        print(*sorted(dp[1][1][1]))\n",
+        "    visited = [False] * (n+1)                       # 노드의 방문 여부 리스트\n",
         "\n",
-        "\n",
+        "    dfs(1)                                          # 1을 루트로하는 DFS 진행\n",
+        "    if dp[1][0][0] > dp[1][1][0]:                   # 1 노드를 독립집합에 포함한 가중치의 최댓값이 더 크면\n",
+        "        print(dp[1][0][0])                              # 해당 가중치의 최댓값을 출력\n",
+        "        print(*sorted(dp[1][0][1]))                     # 해당 독립집합을 정렬 후 출력\n",
+        "    else:                                           # 0 노드를 포함한 값이 더 크면\n",
+        "        print(dp[1][1][0])                              # 해당 가중치의 최댓값을 출력\n",
+        "        print(*sorted(dp[1][1][1]))                     # 해당 독립집합을 정렬 후 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "7\n",
-            "10 30 40 10 20 20 70\n",
-            "1 2\n",
-            "2 3\n",
-            "4 3\n",
-            "4 5\n",
-            "6 2\n",
-            "6 7\n",
-            "[[0, []], [0, []]]\n",
-            "[[130, [5, 3, 7]], [140, [5, 3, 7, 1]]]\n",
-            "[[130, [5, 3, 7]], [120, [5, 7, 2]]]\n",
-            "[[20, [5]], [60, [5, 3]]]\n",
-            "[[20, [5]], [10, [4]]]\n",
-            "[[0, []], [20, [5]]]\n",
-            "[[70, [7]], [20, [6]]]\n",
-            "[[0, []], [70, [7]]]\n",
-            "140\n",
-            "5 3 7 1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -10899,7 +10882,7 @@
         "id": "-WWSnBrXA39V"
       },
       "source": [
-        "####  번"
+        "####   2533번"
       ]
     },
     {
@@ -10908,11 +10891,54 @@
         "id": "XaCeffCzA39V"
       },
       "source": [
+        "# 2번째 예제에서 3, 4 가 얼리어답터일 경우 모든 노드가 연결된 줄 알았는데, \n",
+        "# '자신의 모든 친구들이 얼리 어답터일 때만' 이라는 조건이 있어 조금 해맸다.\n",
+        "\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def dfs(currentNode):                   # 메인 함수\n",
+        "    global visited, edges, dp               # 글로벌 변수 지정\n",
+        "\n",
+        "    visited[currentNode] = True             # 해당 정점 방문 표시\n",
+        "\n",
+        "    for Node in edges[currentNode]:         # 해당 정점과 연결된 정점들\n",
+        "        if not visited[Node]:                   # 연결된 정점을 방문하지 않았다면\n",
+        "            dfs(Node)                               # 연결된 정점 DFS 진행\n",
+        "            \n",
+        "            # 상위 정점이 얼리어답터 집합에 포함되어 있지 않으면 경우의 수는 한 가지 이다.\n",
+        "            dp[currentNode][0] += dp[Node][1]       # 현재 정점이 아닌 곳 연결된 정점이 얼리어답터인 경우 최소 수를 추가\n",
+        "\n",
+        "            # 상위 정점이 얼리어답터 집합에 포함되어 있으면 경우의 수는 두 가지 이다.\n",
+        "            if dp[Node][0] < dp[Node][1]:           # 연결된 노드가 얼리어답터 아닌 경우 최소 수가 더 작으면\n",
+        "                dp[currentNode][1] += dp[Node][0]       # 현재 정점이 얼리어답터인 곳에 연결된 정점이 얼리어답터이 아닌 경우 최소 수를 추가\n",
+        "            else:                                   # 그 반대의 경우\n",
+        "                dp[currentNode][1] += dp[Node][1]       # 현재 정점이 얼리어답터인 곳에 연결된 정점이 얼리어답터인 경우 최소 수를 추가\n",
+        "\n",
+        "    dp[currentNode][1] += 1                 # 현재 정점이 얼리어답터인 경우 1 증가\n",
+        "\n",
+        "def main():                             # 메인 함수\n",
+        "    global visited, edges, dp               # 글로벌 변수 지정\n",
+        "    n = int(input())                        # 친구 관계의 정점의 수 입력\n",
+        "\n",
+        "    edges = [[] for _ in range(n+1)]        # 친구 관계의 간선 입력\n",
+        "    for _ in range(n-1):                    # 트리의 특성상 n-1번 반복\n",
+        "        a, b = map(int, input().split())        # 두 정점 입력\n",
+        "        edges[a].append(b)                      # 무방향 그래프 이므로\n",
+        "        edges[b].append(a)                      # 각 정점에 추가\n",
+        "\n",
+        "    dp = [[False] * 2 for _ in range(n+1)]  # dp[정점][얼리어답터]\n",
+        "\n",
+        "    visited = [False] * (n+1)               # 방문 여부 리스트 생성\n",
+        "\n",
+        "    dfs(1)                                  # 트리의 DFS 실행\n",
+        "\n",
+        "    if dp[1][0] < dp[1][1]:                 # 1번 친구가 얼리어답터가 아닌 경우 얼리어답터의 수가 더 작으면\n",
+        "        print(dp[1][0])                         # 1번 친구를 뺸 얼리어답터의 최소 수 출력\n",
+        "    else:                                   # 1번 친구가 얼리어답터인 경우 얼리어답터의 수가 더 크면\n",
+        "        print(dp[1][1])                         # 1반 친구를 포함한 얼리어답터의 최소 수 출력\n",
+        "    \n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -10926,7 +10952,7 @@
         "id": "D8oqXAX5A4VI"
       },
       "source": [
-        "####  번"
+        "####   1949번"
       ]
     },
     {
@@ -10939,7 +10965,51 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def dfs(currentNode):                           # DFS 함수\n",
+        "    global visited, edges, dp, population           # 글로벌 변수 생성\n",
+        "\n",
+        "    visited[currentNode] = True                     # 현재 마을 방문 표시\n",
+        "\n",
+        "    for Node in edges[currentNode]:                 # 현재 마을과 연결된 마을들 반복\n",
+        "        if not visited[Node]:                           # 연결된 마을을 방문하지 않았다면\n",
+        "            dfs(Node)                                       # 연결된 마을 DFS 실행\n",
+        "            \n",
+        "            # 상위 마을이 우수 마을 집합에 포함되어 있지 않으면 경우의 수는 두 가지 이다.\n",
+        "            if dp[Node][0] > dp[Node][1]:                   # 연결된 마을을 포함하지 않은 인구가 더 크면\n",
+        "                dp[currentNode][0] += dp[Node][0]               # 현재 마을이 우수 마을이 아닌 경우에 연결된 마을을 포함하지 않은 인구를 추가\n",
+        "            else:                                           # 크지 않다면\n",
+        "                dp[currentNode][0] += dp[Node][1]               # 현재 마을이 우수 마을이 아닌 경우에 연결된 마을을 포함한 인구를 추가\n",
+        "\n",
+        "            # 상위 마을이 우수 마을 집합에 포함되어 있으면 경우의 수는 한 가지 이다.\n",
+        "            dp[currentNode][1] += dp[Node][0]               # 현재 마을에 연결된 마을을 포함하지 않는 인구를 추가\n",
+        "\n",
+        "    dp[currentNode][1] += population[currentNode]   # 현재 마을을 포함한 인구수에 현재 마을의 인구 수를 추가\n",
+        "\n",
+        "\n",
+        "def main():                                             # 메인 함수\n",
+        "    global visited, edges, dp, population                   # 글로벌 변수 지정\n",
+        "    n = int(input())                                        # 마을의 수 입력\n",
+        "\n",
+        "    population = [False] + list(map(int, input().split()))  # 각 마을의 주민 수 입력\n",
+        "\n",
+        "    visited = [False] * (n+1)                               # 방문 여부 리스트 생성\n",
+        "\n",
+        "    edges = [[] for _ in range(n+1)]                        # 각 마을 간선 리스트 생성\n",
+        "    for _ in range(n-1):                                    # 트리의 특성상 n-1의 간선\n",
+        "        a, b = map(int, input().split())                        # 두 마을 입력\n",
+        "        edges[a].append(b)                                      # 무방향 그래프이므로\n",
+        "        edges[b].append(a)                                      # 각 마을에 추가\n",
+        "    \n",
+        "    dp = [[False] * 2 for _ in range(n+1)]                  # dp[마을][우수 마을]\n",
+        "\n",
+        "    dfs(1)                                                  # 트리 DFS 실행\n",
+        "    \n",
+        "    if dp[1][0] < dp[1][1]:                                 # 1번 마을을 포함한게 더 크면\n",
+        "        print(dp[1][1])                                         # 포함한 주민 수의 총 합 출력\n",
+        "    else:                                                   # 작다면\n",
+        "        print(dp[1][0])                                         # 포함하지 않은 주민 수의 총 합 출력\n",
+        "    \n",
+        "\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -10969,6 +11039,60 @@
       "cell_type": "code",
       "metadata": {
         "id": "_gLJLPzk8_ZX"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J08dtKYX30yU"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VWFZLql30yV"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BjBgQ5WJ302e"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OSarC7kz302f"
       },
       "source": [
         "import sys\n",
